refactor: Unified FlightModeController with position/velocity control
- Merged ControlNode and OffboardMode into single FlightModeController class
- Added explicit OFFBOARD_POSITION and OFFBOARD_VELOCITY modes
- Implemented velocity control with yaw rate support
- Added hover_position_offboard() and hover_velocity_offboard() methods
- Updated command types: OFFBOARD → OFFBOARD_POSITION, added OFFBOARD_VELOCITY, SET_VELOCITY, STOP_OFFBOARD
- Updated px4_mavlink_interface to handle velocity setpoints
- Simplified BT integration with single g_fc instance
- All tests passing

--- a/control/CMakeLists.txt
+++ b/control/CMakeLists.txt
@@ -7,10 +7,9 @@ find_package(behaviortree_cpp REQUIRED)
 # Find MAVSDK
 find_package(MAVSDK REQUIRED)
 
-# Control library with basic modes and offboard mode
+# Control library with FlightModeController
 add_library(control_node
-    src/basic_modes.cpp
-    src/offboard_mode.cpp
+    src/flight_mode_controller.cpp
 )
 
 target_include_directories(control_node PUBLIC
