--- a/control/CMakeLists.txt
+++ b/control/CMakeLists.txt
@@ -22,6 +22,24 @@ target_link_libraries(control_node
     rt
 )
 
+# BT Nodes library
+add_library(bt_nodes
+    src/bt_mode_nodes.cpp
+    src/bt_mission_nodes.cpp
+)
+
+target_include_directories(bt_nodes PUBLIC
+    include
+    ${CMAKE_SOURCE_DIR}/common
+    ${CMAKE_SOURCE_DIR}/third_party/behaviortree/include
+)
+
+target_link_libraries(bt_nodes
+    control_node
+    ${CMAKE_SOURCE_DIR}/third_party/behaviortree/lib/libbehaviortree_cpp.so
+    pthread
+)
+
 # BT Main executable
 add_executable(bt_main
     src/bt_main.cpp
@@ -34,6 +52,7 @@ target_include_directories(bt_main PRIVATE
 )
 
 target_link_libraries(bt_main
+    bt_nodes
     control_node
     ${CMAKE_SOURCE_DIR}/third_party/behaviortree/lib/libbehaviortree_cpp.so
     pthread
@@ -44,9 +63,15 @@ set_target_properties(bt_main PROPERTIES
     BUILD_WITH_INSTALL_RPATH TRUE
 )
 
-# Copy BT XML file to build directory
+# Copy BT XML files to build directory
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/behavior_trees/autonomy.xml
     ${CMAKE_CURRENT_BINARY_DIR}/behavior_trees/autonomy.xml
+    COPYONLY
+)
+
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/behavior_trees/offboard_missions.xml
+    ${CMAKE_CURRENT_BINARY_DIR}/behavior_trees/offboard_missions.xml
     COPYONLY
 )
